--- a/.gitignore
+++ b/.gitignore
@@ -21,7 +21,9 @@ gen/
 #.idea/workspace.xml - remove # and delete .idea if it better suit your needs.
 .gradle
 build/
-#gradle/
+gradle/
+gradlew
+gradlew.bat
 
 */out
 */build
