--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,4 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
-//if (IS_RUN_ALONE.toBoolean()) {
-//    apply plugin: 'com.android.application'
-//} else {
-//    apply plugin: 'com.android.library'
-//}
-
 apply plugin: 'com.android.library'
 
 group = 'com.github.merlinal'
@@ -26,10 +20,7 @@ allprojects {
     repositories {
         jcenter()
         maven { url 'https://jitpack.io' }
-        maven {
-            url 'https://maven.google.com/'
-            name 'Google'
-        }
+        google()
     }
 }
 
@@ -37,73 +28,30 @@ allprojects {
 //    delete rootProject.buildDir
 //}
 
-
 android {
     compileSdkVersion 27
     buildToolsVersion '27.0.2'
-
     defaultConfig {
         minSdkVersion 15
         targetSdkVersion 27
-        versionCode 1
-        versionName "1.0.0"
+        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
-
-//    signingConfigs {
-//        debug {
-//        }
-//
-//        release {
-//        }
-//    }
-
     buildTypes {
-//        debug {
-//            buildConfigField "boolean", "IS_RUN_ALONE", "true"
-//
-//            minifyEnabled false
-//            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-//            versionNameSuffix "_debug"
-//            signingConfig signingConfigs.debug
-//        }
-
         release {
-//            buildConfigField "boolean", "IS_RUN_ALONE", "false"
-
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-//            versionNameSuffix "_release"
-//            signingConfig signingConfigs.release
         }
     }
-
+    productFlavors {
+    }
     //dataBinding
     dataBinding {
         enabled = true
     }
-
-    packagingOptions {
-        exclude 'META-INF/NOTICE.txt'
-        exclude 'META-INF/NOTICE'
-        exclude 'META-INF/LICENSE.txt'
-        exclude 'META-INF/LICENSE'
-        exclude 'META-INF/DEPENDENCIES'
-    }
-
-    lintOptions {
-        abortOnError false
-    }
-
-    testOptions {
-        unitTests {
-            returnDefaultValues = true
-        }
-    }
-
 }
 
 dependencies {
-    provided 'com.android.support:recyclerview-v7:27.0.2'
+    implementation 'com.android.support:recyclerview-v7:27.0.2'
     provided 'com.github.merlinal:mcore:-SNAPSHOT'
 
     implementation 'com.android.support:appcompat-v7:27.0.2'
@@ -111,27 +59,4 @@ dependencies {
     implementation 'com.github.merlinal:mrecyclerview:-SNAPSHOT'
 }
 
-// build a jar with source files
-task sourcesJar(type: Jar) {
-    from android.sourceSets.main.java.srcDirs
-    classifier = 'sources'
-}
-
-task javadoc(type: Javadoc) {
-    failOnError false
-    source = android.sourceSets.main.java.sourceFiles
-    classpath += project.files(android.getBootClasspath().join(File.pathSeparator))
-    classpath += configurations.compile
-}
-
-// build a jar with javadoc
-task javadocJar(type: Jar, dependsOn: javadoc) {
-    classifier = 'javadoc'
-    from javadoc.destinationDir
-}
-
-artifacts {
-    archives sourcesJar
-    archives javadocJar
-}
 
