--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,8 @@ android {
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
+        debug {
+        }
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
@@ -53,10 +55,11 @@ android {
 dependencies {
     implementation 'com.android.support:recyclerview-v7:27.0.2'
     provided 'com.github.merlinal:mcore:-SNAPSHOT'
-
     implementation 'com.android.support:appcompat-v7:27.0.2'
     implementation 'com.android.support:design:27.0.2'
     implementation 'com.github.merlinal:mrecyclerview:-SNAPSHOT'
+
+//    compile project(':mcore')
 }
 
 
