--- a/build.gradle
+++ b/build.gradle
@@ -57,7 +57,7 @@ dependencies {
     provided 'com.github.merlinal:mcore:-SNAPSHOT'
     implementation 'com.android.support:appcompat-v7:27.0.2'
     implementation 'com.android.support:design:27.0.2'
-    api 'com.github.merlinal:mrecyclerview:-SNAPSHOT'
+    implementation 'com.github.merlinal:mrecyclerview:-SNAPSHOT'
 }
 
 
