--- a/build.gradle
+++ b/build.gradle
@@ -53,11 +53,11 @@ android {
 }
 
 dependencies {
-    implementation 'com.android.support:recyclerview-v7:27.0.2'
     provided 'com.github.merlinal:mcore:-SNAPSHOT'
+    implementation 'com.android.support:recyclerview-v7:27.0.2'
     implementation 'com.android.support:appcompat-v7:27.0.2'
     implementation 'com.android.support:design:27.0.2'
-    implementation 'com.github.merlinal:mrecyclerview:-SNAPSHOT'
+    api 'com.github.merlinal:mrecyclerview:-SNAPSHOT'
 }
 
 
